--- a/react-notes/src/index.css
+++ b/react-notes/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background-repeat: no-repeat;
-    background-size: cover;
-
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #bfdbfe;
 }
