--- a/react-notes/src/index.css
+++ b/react-notes/src/index.css
@@ -5,5 +5,24 @@
 body {
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #bfdbfe;
+  @apply bg-primary;
+}
+
+::-webkit-scrollbar {
+  @apply bg-notes;
+  @apply w-2;
+}
+/* Track */
+/* ::-webkit-scrollbar-track {
+  
+} */
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-slate-800 rounded;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: black;
 }
