--- a/react_notes/src/styles/globals.css
+++ b/react_notes/src/styles/globals.css
@@ -6,15 +6,15 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   @apply bg-primary;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
   @apply w-2;
 }
 /* Track */
-/* ::-webkit-scrollbar-track {
-  
-} */
+::-webkit-scrollbar-track {
+}
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
@@ -23,5 +23,5 @@ body {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: black;
+  @apply bg-primary;
 }
