google sign in fungerer, login ui endringer, og noe mer

--- a/react_notes/src/styles/globals.css
+++ b/react_notes/src/styles/globals.css
@@ -9,6 +9,10 @@ body {
   @apply bg-1;
 }
 
+.animation-parent:hover .animation-child {
+  @apply animate-rotate-x  animate-once;
+}
+
 ::-webkit-scrollbar {
 }
 /* Track */
